fix layout issues with top nav area

--- a/app/javascript/stylesheets/partials/header.scss
+++ b/app/javascript/stylesheets/partials/header.scss
@@ -67,40 +67,27 @@
 
 #links-navbar {
   font-size: $font-size-small;
-
-  & .container {
-    padding-left: 0;
-    padding-right: 0;
-  }
+  border-bottom: $border;
+  box-shadow: 0 1px 2px $gray-lighter;
 
   & nav {
+    display: flex;
+    justify-content: space-between;
+    margin-left: -5px;
+  }
+
+  & nav ul {
     margin: 0;
+    padding: 0;
   }
 
-  & .navbar {
-    min-height: auto;
+  & nav li {
+    display: inline;
   }
 
-  & .navbar .container {
-    justify-content: flex-start;
-  }
-
-  & .navbar-default {
-    background-color: $body-bg;
-    border: 0;
-    border-bottom: $border;
-    box-shadow: 0 1px 2px $gray-lighter;
-    padding-left: 5px;
-  }
-
-  & .navbar-nav {
-    flex-direction: row;
-    margin: 0;
-  }
-
-  & .navbar-nav > li a {
-    color: $link-color;
-    padding: 5px 10px;
+  & nav li a {
+    display: inline-block;
+    padding: 10px 5px;
   }
 
   & .navbar-nav > li a:hover {
@@ -130,17 +117,5 @@
 
   #links-navbar {
     font-size: $font-size-base;
-
-    & .navbar .container {
-      justify-content: space-between;
-    }
-
-    & .navbar-nav > li a {
-      padding: 10px 15px;
-    }
-
-    & .share-button span {
-      display: inline;
-    }
   }
 }
